--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-emoji": "^0.5.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scroll-to-bottom": "^4.2.0",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "netlify-cli": "^6.14.0"
   }
 }
